--- a/Frontend/hostGame.html
+++ b/Frontend/hostGame.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <link rel="stylesheet" href="hostGame.css">
         <title>YATTA Host Game</title>
     </head>
     <body>
 
     <header id="menu title"> Host Game </header>
-    <div class="forms">
+    <div class ="buttons">
     <button onclick="location.href = 'hostGame.html';">Host Game</button> 
     <button onclick="location.href = 'menu.html';">Back</button> 
     </div>
