Organized and fixed css

--- a/Frontend/html/hostGame.html
+++ b/Frontend/html/hostGame.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="hostGame.css">
+    <link rel="stylesheet" href="../css/hostGame.css">
         <title>YATTA Host Game</title>
     </head>
     <body>
 
     <header id="menu title"> Host Game </header>
     <div class ="buttons">
-    <button onclick="location.href = 'hostGame.html';">Host Game</button> 
-    <button onclick="location.href = 'menu.html';">Back</button> 
+    <button onclick="location.href = '../html/hostGame.html';">Host Game</button> 
+    <button onclick="location.href = '../html/menu.html';">Back</button> 
     </div>
 
 
