--- a/Frontend/html/joinGame.html
+++ b/Frontend/html/joinGame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="joinGame.css">
+        <link rel="stylesheet" href="../css/joinGame.css">
         <title>YATTA Join Game</title>
     </head>
     <body>
@@ -18,7 +18,7 @@
     </form>
     <div class = "buttons">
     <button onclick="enterTheGame()">Enter</button> 
-    <button onclick="location.href = 'menu.html';">Back</button> 
+    <button onclick="location.href = '../html/menu.html';">Back</button> 
     </div>
 
     </body>
