--- a/Frontend/html/menu.html
+++ b/Frontend/html/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="../css/menu.css">
         <title>YATTA</title>
     </head>
   
@@ -10,8 +10,8 @@
     <header id="menu title"> Yet Another Table Top API </header>
 </div>
     <div class="buttons">
-        <button onclick="location.href = 'hostGame.html';">Host Game</button> <br>
-        <button onclick="location.href = 'joinGame.html';">Join Game</button> 
+        <button onclick="location.href = '../html/hostGame.html';">Host Game</button> <br>
+        <button onclick="location.href = '../html/joinGame.html';">Join Game</button> 
     </div>
   
 
