--- a/Frontend/html/joinGame.html
+++ b/Frontend/html/joinGame.html
@@ -17,7 +17,7 @@
         </div>
     </form>
     <div class = "buttons">
-    <button onclick="enterTheGame()">Enter</button> 
+    <button onclick="location.href = '../BattleMap/yatta.html';">Enter</button> 
     <button onclick="location.href = '../html/menu.html';">Back</button> 
     </div>
 
